# qbitel-qsgw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  go.work
.github/workflows/: deploy-website.yml
admin/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx
admin/src/components/: ui.tsx
admin/src/pages/: DashboardPage.tsx  GatewaysPage.tsx  ThreatsPage.tsx  UpstreamsPage.tsx
ai-engine/: Dockerfile  pyproject.toml
ai-engine/src/qsgw_ai/: __init__.py
ai-engine/src/qsgw_ai/anomaly_detector/: __init__.py  detector.py
ai-engine/src/qsgw_ai/api/: app.py
ai-engine/src/qsgw_ai/bot_detector/: __init__.py  detector.py
ai-engine/tests/: test_anomaly_detector.py  test_bot_detector.py
control-plane/: Dockerfile  go.mod
control-plane/cmd/server/: main.go
control-plane/internal/config/: config.go
control-plane/internal/handler/: gateway.go  health.go  route.go  threat.go  upstream.go
control-plane/internal/model/: gateway.go  route.go  threat.go  upstream.go
control-plane/internal/repository/: gateway_repo.go  route_repo.go  threat_repo.go  upstream_repo.go
control-plane/internal/service/: gateway_service.go  route_service.go  upstream_service.go
crypto/: Cargo.toml
crypto/benches/: crypto_bench.rs
crypto/src/: error.rs  hybrid.rs  lib.rs  mldsa.rs  mlkem.rs  rng.rs  slhdsa.rs
db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  GATEWAY_CONFIG.md  THREAT_DETECTION.md
gateway/: Cargo.toml  Dockerfile
gateway/src/: lib.rs
gateway/src/auth/: mod.rs
gateway/src/middleware/: mod.rs
gateway/src/proxy/: mod.rs
gateway/src/tls/: mod.rs
infra/docker/: docker-compose.deps.yml  docker-compose.yml
shared/go/: go.mod
shared/go/database/: pool.go
shared/go/middleware/: auth.go  auth_test.go  helpers.go  pagination.go  ratelimit.go  security.go  security_test.go
tls/: Cargo.toml
tls/src/: config.rs  lib.rs
types/: Cargo.toml
types/src/: algorithm.rs  error_code.rs  lib.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Architecture.astro  Community.astro  Comparison.astro  Docs.astro  FeatureCard.astro  Features.astro  Footer.astro  GradientBlob.astro  Header.astro  Hero.astro  QuickStart.astro  SectionHeading.astro  ThreatDetection.astro
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
