[workspace]
resolver = "2"
members = [
    "gateway",
    "crypto",
    "types",
    "tls",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/quantun-opensource/qsgw"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
rustls = "0.23"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
axum = "0.8"
tonic = "0.12"
prost = "0.13"
bytes = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Post-quantum cryptography (FIPS 203/204/205)
# Using RC versions from RustCrypto — all aligned on signature 3.x
ml-kem = "0.3.0-rc.0"
ml-dsa = "0.1.0-rc.7"
slh-dsa = "0.2.0-rc.4"
hybrid-array = "0.2"
signature = "3.0.0-rc.0"
getrandom = "0.3"
zeroize = { version = "1", features = ["derive"] }
