[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qsgw-ai"
version = "0.1.0"
description = "QSGW AI Engine – anomaly detection, bot detection, and quantum threat analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]
