[package]
name = "quantun-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantun-types = { path = "../types" }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
tracing = { workspace = true }

# Real PQC implementations (FIPS 203/204/205)
ml-kem = { workspace = true }
ml-dsa = { workspace = true }
slh-dsa = { workspace = true }
hybrid-array = { workspace = true }
signature = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
